# opencv343-android-videocapture

./: README.md
VideoReader/: local.properties  settings.gradle
VideoReader/app/: build.gradle
VideoReader/app/src/main/: AndroidManifest.xml
VideoReader/app/src/main/java/com/example/videoreader/: MainActivity.java
VideoReader/app/src/main/res/drawable/: border_bg.xml
VideoReader/app/src/main/res/layout/: activity_main.xml
VideoReader/app/src/main/res/values/: dimens.xml  strings.xml
VideoReader/videoLibrary/: CMakeLists.txt  build.gradle
VideoReader/videoLibrary/src/main/: AndroidManifest.xml
VideoReader/videoLibrary/src/main/cpp/: Util.cpp  Util.h  jni_bridge.cpp
VideoReader/videoLibrary/src/main/cpp/callback/: VideoCallback.cpp  VideoCallback.h
VideoReader/videoLibrary/src/main/cpp/include/opencv2/: calib3d.hpp  core.hpp  cvconfig.h  imgproc.hpp  objdetect.hpp  photo.hpp  videoio.hpp
VideoReader/videoLibrary/src/main/cpp/include/opencv2/core/: base.hpp  cvdef.h  mat.hpp  mat.inl.hpp  persistence.hpp  types.hpp  types_c.h  utility.hpp  version.hpp
VideoReader/videoLibrary/src/main/cpp/include/opencv2/core/cuda/: functional.hpp
VideoReader/videoLibrary/src/main/cpp/include/opencv2/core/hal/: intrin.hpp  intrin_avx.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp
VideoReader/videoLibrary/src/main/cpp/include/opencv2/dnn/: all_layers.hpp  dnn.hpp
VideoReader/videoLibrary/src/main/cpp/videoreader/: VideoReader.cc  VideoReader.h
VideoReader/videoLibrary/src/main/java/com/example/videolibrary/: VideoPresenter.java
VideoReader/videoLibrary/src/main/res/values/: strings.xml
